--- a/December/responsive-cards/src/scss/main.scss
+++ b/December/responsive-cards/src/scss/main.scss
@@ -6,4 +6,4 @@
 
 // підключення компонентів до сторінки
 @import "./components/header";
-@import "./components/example";
+@import "./components/cards";
