`Kursova 2022` menu & pages

--- a/kursova/src/scss/main.scss
+++ b/kursova/src/scss/main.scss
@@ -7,4 +7,10 @@
 // підключення компонентів до сторінки
 @import "./components/header";
 @import "./components/menu";
+@import "./components/footer";
 @import "./components/main";
+@import "./components/discover";
+@import "./components/services";
+@import "./components/news";
+@import "./components/about-us";
+@import "./components/contacts";
