Responsive menu & footer basics `Kursova 2022`

--- a/kursova/src/partials/footer.html
+++ b/kursova/src/partials/footer.html
@@ -1,3 +1,41 @@
 <footer class="footer">
-  <div class="container-footer">FOOTER</div>
+  <div class="container-footer">
+    <div class="footer-line-grid">
+      <div class="footer-line-items">
+        <div onclick="location.href='/'" class="up-line-footer-item logo">
+          travelaja
+        </div>
+        <div>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis incidunt quae non alias. Mollitia provident similique quos quas cupiditate earum nisi perspiciatis non itaque eos! Pariatur porro enim omnis possimus.
+        </div>
+      </div>
+      <div class="footer-line-items">
+        <div class="up-line-footer-item">Links</div>
+        <div>
+            <a href="/discover.html">Discover</a><br>
+            <a href="#">Spesial deals</a><br>
+            <a href="/services.html">Services</a><br>
+            <a href="#">Community</a><br>
+            <a href="/about-us.html">About Us</a>
+        </div>
+      </div>
+      <div class="footer-line-items">
+        <div class="up-line-footer-item">Services</div>
+        <div>
+          Lorem ipsum dolor sit amet.
+        </div>
+      </div>
+      <div class="footer-line-items">
+        <div class="up-line-footer-item">Contact</div>
+        <div>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, rem blanditiis fuga quidem perspiciatis eaque neque nesciunt dicta, rerum quo quasi pariatur iste provident voluptatem dolores impedit ad nihil id.
+          Nihil eaque, corrupti numquam ipsam facere tenetur ratione iure maxime aliquam.
+        </div>
+      </div>
+    </div>
+    <div class="footer-line-grid" style="font-weight: bolder;">
+      Ikuti Kami<br>
+      @include('social.html')
+    </div>
+  </div>
 </footer>
