--- a/kursova/src/scss/components/_menu.scss
+++ b/kursova/src/scss/components/_menu.scss
@@ -4,13 +4,14 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    gap: 178px;
+    width: 100%;
     height: 60px;
     color: #000;
     font-family: 'Poppins';
     position: fixed;
     top: 0;
     z-index: 100;
+    backdrop-filter: blur(5px);
 
     .logo {
         font-style: normal;
@@ -32,8 +33,57 @@
         }
     }
 
+     .menu-items-collapsed {
+        font-size: 35px;
+        font-weight: bold;
+        cursor: pointer;
+     }
+
+    @media screen and (min-width: 0px) and (max-width: 768px) {
+        .menu-items {
+            display: none;
+        }
+
+        .menu-items-collapsed {
+            display: block;
+        }
+    }
+
+   @media screen and (min-width: 769px) and (max-width: 4096px) {
+        .menu-items-collapsed {
+           display: none;
+        }
+    }
+
     .button-location {
         max-width: 15%;
         font-weight: bold;
+        img {
+            cursor: pointer;
+        }
+    }
+}
+
+.collapsed-menu {
+    background-color: #43B97F;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 200;
+    height: 100%;
+    width: 100%;
+    font-family: 'Poppins';
+    font-size: x-large;
+    text-align: center;
+    padding: 10px;
+    display: none;
+    a {
+        text-decoration: none;
+        cursor: pointer;
+        color: #fff;
+        margin-top: 5px;
+        &:first-child {
+            font-weight: bold;
+        }
     }
 }
