Finished footer & start with main page content `Kursova 2022`

--- a/kursova/src/partials/footer.html
+++ b/kursova/src/partials/footer.html
@@ -10,27 +10,33 @@
         </div>
       </div>
       <div class="footer-line-items">
-        <div class="up-line-footer-item">Links</div>
+        <div class="up-line-footer-item" style="font-size: 25px;">Links</div>
         <div>
-            <a href="/discover.html">Discover</a><br>
-            <a href="#">Spesial deals</a><br>
-            <a href="/services.html">Services</a><br>
-            <a href="#">Community</a><br>
+            <a href="/discover.html">Discover</a><br><br>
+            <a href="#">Spesial deals</a><br><br>
+            <a href="/services.html">Services</a><br><br>
+            <a href="#">Community</a><br><br>
             <a href="/about-us.html">About Us</a>
         </div>
       </div>
       <div class="footer-line-items">
-        <div class="up-line-footer-item">Services</div>
+        <div class="up-line-footer-item" style="font-size: 25px;">Services</div>
         <div>
-          Lorem ipsum dolor sit amet.
+            <a href="/about-us.html">About Us</a><br><br>
+            <a href="#">Blog & Articles</a><br><br>
+            <a href="#">Terms & Conditions</a><br><br>
+            <a href="#">Privacy Policy</a><br><br>
+            <a href="/contacts.html">Contact Us</a>
         </div>
       </div>
       <div class="footer-line-items">
-        <div class="up-line-footer-item">Contact</div>
+        <div class="up-line-footer-item" style="font-size: 25px;">Contact</div>
         <div>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, rem blanditiis fuga quidem perspiciatis eaque neque nesciunt dicta, rerum quo quasi pariatur iste provident voluptatem dolores impedit ad nihil id.
-          Nihil eaque, corrupti numquam ipsam facere tenetur ratione iure maxime aliquam.
-        </div>
+          <span>Address: Jl.Codelaras No.205A</span><br><br>
+          <span>Kediri, Pare AG17</span><br><br>
+          <span>Phone: 123 456 7890</span><br><br>
+          <span>Email: myagungperdana@gmail.com</span><br><br>
+          <span>Maps: Kediri, East java</span>
       </div>
     </div>
     <div class="footer-line-grid" style="font-weight: bolder;">
