--- a/kursova/src/scss/_vars.scss
+++ b/kursova/src/scss/_vars.scss
@@ -2,7 +2,7 @@
 // colors
 :root {
   // base
-  --font-family: "Aeonic-Regular", sans-serif;
+  --font-family: "Poppins", sans-serif;
   --content-width: 1170px;
   --container-offset: 15px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
