--- a/kursova/src/scss/components/_main.scss
+++ b/kursova/src/scss/components/_main.scss
@@ -17,4 +17,38 @@
             font-weight: bold;
         }
     }
+
+    .main-header-content {
+        height: 720px;
+        width: 100%;
+        align-items: center;
+        text-align: center;
+        display: grid;
+        margin: 0 auto;
+        justify-content: center;
+        color: #fff;
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 400;
+
+        > * {
+                align-self: center;
+            }
+
+        div {
+            padding: 30px;
+            &:first-child {
+                font-size: 48px;
+            }
+        }
+
+        .search-bar {
+            height: 67px;
+            margin-left: 15%;
+            margin-right: 15%;
+            background-color: #fff;
+            box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.25);
+            border-radius: 8px;
+        }
+    }
 }
