--- a/kursova/src/scss/components/_menu.scss
+++ b/kursova/src/scss/components/_menu.scss
@@ -44,6 +44,10 @@
             display: none;
         }
 
+        .search-item {
+            display: none;
+        }
+
         .menu-items-collapsed {
             display: block;
         }
