--- a/kursova/src/scss/components/_discover.scss
+++ b/kursova/src/scss/components/_discover.scss
@@ -27,7 +27,7 @@
     position: relative;
 }
 
-.map-block {
+.map-block, .nature-info-block {
     width: 100%;
     display: grid;
     grid-template-columns: 70% 30%;
